overflow fixed

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -112,7 +112,7 @@ body {
     align-items: center;
     justify-items: center;
     overflow-x: hidden;
-    overflow-y: hidden;
+    // overflow-y: hidden;
     margin: 0;
 
     .main {
